--- a/main.html
+++ b/main.html
@@ -106,6 +106,10 @@
             SCP-5034「肉の天使たち」訳者:Extra3002 原語版作者:Tanhony <a href="http://scp-jp.wikidot.com/scp-5034">http://scp-jp.wikidot.com/scp-5034</a><br>
             SCP-001「夜明けの刻」作者:Shaggydredlocks<a href="http://scp-jp.wikidot.com/scp-001">http://scp-jp.wikidot.com/scp-001</a><br>
             SCP-1690-JP「犭貪(トン)あるいはウロボロス」作者:physicslike<a href="http://scp-jp.wikidot.com/scp-1690-jp">http://scp-jp.wikidot.com/scp-1690-jp</a><br>
+            アイコンのSCP財団ロゴマークは、"Aelanna"作「Logo SCP Foundation」に基づいており、
+            クリエイティブ・コモンズ 表示 - 継承3.0ライセンスに基づき公開されます。
+            （<a href="http://www.scp-wiki.net/dr-mackenzie-s-sketchbook">http://www.scp-wiki.net/dr-mackenzie-s-sketchbook</a>）
+
         </p>
     </body>
 </html>
