--- a/anomalous.html
+++ b/anomalous.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body class="body">
-        <h1><a href="main.html">SCP財団</a></h1>
+        <h1><a href="index.html">SCP財団</a></h1>
         <div class="side-and-content">
             <div class="side">
                 <p>過去のJPコンテスト一覧</p>
