--- a/scp-587-jp.html
+++ b/scp-587-jp.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="keywords" content="HTML,CSS,Javascript">
         <title>死体に非ず</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body class="body">
         <h1><a href="main.html">SCP財団</a></h1>
